added header, logo , button

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev-server": "npx json-server --watch db.json -p 3200"
+    "dev-server": "json-server --watch db.json -p 3200"
   },
   "eslintConfig": {
     "extends": [
