--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build & json-server --watch db.json -p 3200",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "dev-server": "json-server --watch db.json -p 3200"
