--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build & json-server --watch db.json -p 3200",
+    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev-server": "json-server --watch ./db.json -p 3200"
   },
   "eslintConfig": {
     "extends": [
